# sldt-semantic-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: update-models.yml  validate.yml
scripts/: test_parser.py
src/sldt_analyzer/: __init__.py  fetch.py  graph.py  issues.py  parser.py  standards.py
tests/: test_issues_characteristic.py  test_issues_dep.py  test_merge_models.py  test_parser_helpers.py  test_standards.py
web/: index.html
web/css/: app.css
web/data/graph/: deps.json  index.json  io.admin-shell.idta.batterypass.carbon_footprint__1.0.0.json  io.admin-shell.idta.batterypass.circularity__1.0.0.json  io.admin-shell.idta.batterypass.digital_nameplate__1.0.0.json  io.admin-shell.idta.batterypass.handover_documentation__1.0.0.json  io.admin-shell.idta.batterypass.material_composition__1.0.0.json  io.admin-shell.idta.batterypass.material_composition__1.0.1.json  io.admin-shell.idta.batterypass.product_condition__1.0.0.json  io.admin-shell.idta.batterypass.product_condition__1.0.1.json  io.admin-shell.idta.batterypass.technical_data__1.0.0.json  io.admin-shell.idta.batterypass.technical_data__1.0.1.json  io.admin-shell.idta.carbon_footprint__1.0.0.json  io.admin-shell.idta.contact_information__1.0.0.json  io.admin-shell.idta.digital_nameplate__3.0.0.json  io.admin-shell.idta.dpp.dpp_metadata__1.0.0.json  io.admin-shell.idta.generic.technical_data__1.2.0.json  io.admin-shell.idta.generic.technical_data__2.0.0.json  io.admin-shell.idta.handover_documentation__2.0.0.json  io.admin-shell.idta.shared__3.1.0.json  (+557 more)
web/js/: app.js
