[project]
name = "sldt-semantic-analyzer"
version = "0.1.0"
description = "Analyseur sémantique des modèles SLDT (eclipse-tractusx/sldt-semantic-models)"
requires-python = ">=3.11"
# Feature 1 (rapatriement) : aucune dépendance externe (git + stdlib).
# rdflib sera utilisé dès la feature 2 (parsing .ttl).
dependencies = [
    "rdflib>=7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
